--- a/src/main/resources/Application.properties
+++ b/src/main/resources/Application.properties
@@ -4,6 +4,13 @@ auth.msg.input.password = Your password:
 auth.msg.button.submit = Login
 
 reservation.msg.title.name = Reservation
+reservation.msg.reservation.code = Reservation code: 
+reservation.msg.reservation.description = Reservation description:
+reservation.msg.reservation.absent = There are no reservations.
+reservation.msg.column.type = Type
+reservation.msg.column.time = Creation time
+reservation.msg.column.status = Status
+reservation.msg.column.sequence = Sequence
 
 auth.error.login.missing = The login field is required to be filled
 auth.error.password.missing = The password field is required to be filled
