--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,1 +1,3 @@
 UserDAOImpl = com.haurylenka.projects.reservation.impls.MemoryUserDAOImpl
+ReservationDAOImpl = com.haurylenka.projects.reservation.impls.XMLReservationDAOImpl
+reservationXMLFileName = 0004257753.xml
