--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,18 @@
 			<version>1.3.10</version>
 		</dependency>
 		
+<dependency>
+    <groupId>org.apache.struts</groupId>
+    <artifactId>struts-tiles</artifactId>
+    <version>1.3.10</version>
+</dependency>
+
+<dependency>
+    <groupId>org.apache.struts</groupId>
+    <artifactId>struts-el</artifactId>
+    <version>1.3.10</version>
+</dependency>
+		
 		<dependency>
 			<groupId>commons-digester</groupId>
 			<artifactId>commons-digester</artifactId>
