--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,6 @@
-UserDAOImpl = com.haurylenka.projects.reservation.impls.MemoryUserDAOImpl
-ReservationDAOImpl = com.haurylenka.projects.reservation.impls.XMLReservationDAOImpl
+#UserDAOImpl = com.haurylenka.projects.reservation.impls.MemoryUserDAOImpl
+UserDAOImpl = com.haurylenka.projects.reservation.impls.JNDIUserDAOImpl
+#ReservationDAOImpl = com.haurylenka.projects.reservation.impls.XMLReservationDAOImpl
+ReservationDAOImpl = com.haurylenka.projects.reservation.impls.JNDIReservationDAOImpl
 reservationXMLFileName = 0004257753.xml
+JNDI_URL = jnp://localhost:1099
